FIX IT21 Empty value truncated zone

--- a/app/style/2020/output.scss
+++ b/app/style/2020/output.scss
@@ -21,6 +21,11 @@ ul.object.properties {
 			vertical-align: top;
 		}
 
+		> :empty:before {
+			content: ' ';
+			white-space: pre;
+		}
+
 		> ul {
 			display: block;
 
